# alpha-sniper-v4.2

./: .gitignore  BACKTEST_README.md  BACKTEST_SUMMARY.md  CRITICAL_LIVE_FIXES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DFE_IMPLEMENTATION.md  FUNDING_IMPLEMENTATION.md  PHASE1-3_DEPLOYMENT.md  PRODUCTION_ISSUES_FIXED.md  PRODUCTION_SAFETY_FIXES.md  PRODUCTION_STATUS.md  QUICKSTART_BACKTEST.md  QUICK_DEPLOY.sh  README.md  STATUS_REPORT_FOR_GROK.md  TECHNICAL_OVERVIEW.md  TESTING_SUMMARY.md  alpha-sniper-live.env.new  alpha-sniper-live.env.optimized  backtest_pump.py  deploy-to-server.sh  download_mexc_data.py  generate_sample_data.py  get_telegram_chat_id.py  pyproject.toml
alpha-sniper/: .env  .env.PRODUCTION_READY  .env.example  .env.live.aggressive  .env.live.clean  .env.my_recommendation  .env.recommended  .gitignore  CHANGES.md  DELIVERABLES.md  DEPLOYMENT.md  Makefile  PUMP_ONLY_MODE.md  QUICKSTART.md  README.md  SYSTEM_DOCUMENTATION.md  TEST_DOCUMENTATION.md  config.py  conftest.py  exchange.py  main.py  pump_trailer.py  requirements.txt  risk_engine.py  run.py  run_new_tests.sh  test_balance.py  test_config_pump_thresholds.py  test_dfe.py  test_edge_cases_boundaries.py  test_entry_dete.py  test_funding.py  test_integration_pump_thresholds.py  test_main_scan_timing.py  test_pump_engine_aggressive.py  test_risk_engine_regime.py
deployment/: DEPLOYMENT_FIX.md  ENV_SETUP_GUIDE.md  NO_TRADES_DIAGNOSTIC.md  QUICKSTART.md  alpha-sniper-live.env.OPTIMIZED  alpha-sniper-live.env.template  alpha-sniper-live.service  apply_phase1_optimizations.sh  check_log_format.sh  (+15 more)
(+47 files in other folders)
